Add PUT method

PUT method was missing

Task-number: QTBUG-58426
Change-Id: I6f8d71869813048953c48dc32c38ad1d7acd4aba
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Jesus Fernandez <Jesus.Fernandez@qt.io>